--- a/ml_project_task1.1.ipynb
+++ b/ml_project_task1.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "69f17708",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c536ea70",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "66efa0ba",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "15325c53",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "d1ee1093",
    "metadata": {},
    "outputs": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "16612b66",
    "metadata": {},
    "outputs": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "bff0ffcb",
    "metadata": {},
    "outputs": [
@@ -850,6 +850,17 @@
     "\n",
     "# The curve rises very steeply at the beginning and then flattens quickly\n",
     "# This suggests that a small number of components can capture most of the variance in the data, which is promising for dimensionality reduction before classification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89b0fc37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "x = [1, 2, 3, 4, 5, 6, 7, 8]"
    ]
   }
  ],
