--- a/ml_project_task1.1.ipynb
+++ b/ml_project_task1.1.ipynb
@@ -851,6 +851,24 @@
     "# The curve rises very steeply at the beginning and then flattens quickly\n",
     "# This suggests that a small number of components can capture most of the variance in the data, which is promising for dimensionality reduction before classification."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a2f270e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hey there!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7d42125",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
