Modified some structure

--- a/notebooks/ml_project_task1.1.ipynb
+++ b/notebooks/ml_project_task1.1.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "961a2f78",
    "metadata": {},
    "outputs": [
@@ -49,6 +49,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "#Local imports\n",
     "sys.path.append(\"/Users/mihneapiuaru/Desktop/LSE Academic Courses/ST443/group_project/ml_project/src\") \n",
@@ -2039,8 +2041,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c6eb99e8",
+   "metadata": {},
+   "source": [
+    "Before fitting the models, we will do two more tasks: Clustering and PCA. Clustering will helps us visualize the features more, and PCA will be able to help us for dimensionality reduction. Due to the large number of features, it might be helpful to do Clustering on the first principal components."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "bff0ffcb",
    "metadata": {},
    "outputs": [
@@ -2056,10 +2066,6 @@
     }
    ],
    "source": [
-    "# Preliminary PCA\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "import numpy as np\n",
     "\n",
     "X = StandardScaler().fit_transform(data1[bands])\n",
     "pca = PCA().fit(X)\n",
