--- a/task1.ipynb
+++ b/task1.ipynb
@@ -2564,7 +2564,7 @@
    "id": "9af946a0",
    "metadata": {},
    "source": [
-    "## Task 1.2 - Model Fitting"
+    "## Task 1.2 - Model Development"
    ]
   },
   {
@@ -2572,7 +2572,190 @@
    "id": "024d70d7",
    "metadata": {},
    "source": [
-    "In this part of the project, we will try to predict the Vegetation type based on the reflectance values of the pixels. This is a MultiClass classification problem, and we will use several types of classifiers for this task. To encode the variables from categorical to numerical, we will use Scikit Learn's Label Encoder.The methodology will be the following: we will fit the models and report the cross-validation errors on the training set to adjust the hyperparamters. After finding the best model, we will fit it to the whole training data, and report its performance on the test set. The test set will be used only to report the performance. We will start with logistic regression."
+    "In this part of the project, we will try to predict the Vegetation type based on the reflectance values of the pixels. This is a MultiClass classification problem, and we will use several types of classifiers for this task. To encode the variables from categorical to numerical, we will use Scikit Learn's Label Encoder.The methodology will be the following: we will fit the models and report the cross-validation errors on the training set to adjust the hyperparamters. After finding the best model, we will fit it to the whole training data, and report its performance on the test set. The test set will be used only to report the performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c612726",
+   "metadata": {},
+   "source": [
+    "### Define functions to evaluate performances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cff1f9d4",
+   "metadata": {},
+   "source": [
+    "Create function to report cross-validation performance - This will help us tweak the hyperparameters in case it's necessary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "242fabd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_cv(estimator, X, y, scoring_list, model_name = \"model\"):\n",
+    "    \n",
+    "    #Define StratifiedKFold splitter. This makes sure than no split is more imbalanced than the original data\n",
+    "    cv_splitter = StratifiedKFold(n_splits = 5, shuffle = True, random_state = 42)\n",
+    "\n",
+    "    #Calculate the CV score for each metric\n",
+    "    cv_results = cross_validate(\n",
+    "        estimator, \n",
+    "        X, \n",
+    "        y, \n",
+    "        scoring = scoring_list, \n",
+    "        cv = cv_splitter, \n",
+    "        return_train_score=False\n",
+    "    )\n",
+    "\n",
+    "    #Create a dataframe with all the performance metrics using cv\n",
+    "    row = {\"model\": model_name}\n",
+    "    for k, v in cv_results.items():\n",
+    "        if k.startswith(\"test_\"):\n",
+    "            metric = k.replace(\"test_\", \"\")\n",
+    "            row[f\"{metric}\"] = np.mean(v)\n",
+    "        \n",
+    "    return pd.DataFrame([row]).set_index(\"model\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f97c1b1a",
+   "metadata": {},
+   "source": [
+    "Function to evaluate the performance on the test set, and return the predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0c320971",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict_evaluate\u001b[39m(estimator, X_tr: pd\u001b[38;5;241m.\u001b[39mDataFrame, X_ts: pd\u001b[38;5;241m.\u001b[39mDataFrame, y_tr: pd\u001b[38;5;241m.\u001b[39mDataFrame, y_ts, model_name: \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m     \u001b[38;5;66;03m#Fit the estimator on the training data\u001b[39;00m\n\u001b[1;32m      4\u001b[0m     classifier \u001b[38;5;241m=\u001b[39m estimator\u001b[38;5;241m.\u001b[39mfit(X_tr, y_tr)\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m#Find the predictions and probabilities\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def predict_evaluate(estimator, X_tr: pd.DataFrame, X_ts: pd.DataFrame, y_tr: pd.DataFrame, y_ts, model_name: str):\n",
+    "\n",
+    "    #Fit the estimator on the training data\n",
+    "    classifier = estimator.fit(X_tr, y_tr)\n",
+    "\n",
+    "    #Find the predictions and probabilities\n",
+    "    predictions = classifier.predict(X_ts)\n",
+    "    predictions_prob = classifier.predict_proba(X_ts)\n",
+    "\n",
+    "    #Calculate the error metrics using predictions\n",
+    "    acc = accuracy_score(y_ts, predictions)\n",
+    "    balanced_acc = balanced_accuracy_score(y_ts, predictions)\n",
+    "    f1 = f1_score(y_ts, predictions, average=\"macro\")\n",
+    "\n",
+    "    #Calculate auroc using the probabilities\n",
+    "    auc = roc_auc_score(y_ts, predictions_prob, average = \"macro\", multi_class=\"ovr\")\n",
+    "\n",
+    "    return pd.DataFrame({\"model\": [model_name], \"Accuracy\": [acc], \"Bal. Acc\": [balanced_acc], \"AUC\": [auc], \"F1\": [f1]}), predictions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6653c7ca",
+   "metadata": {},
+   "source": [
+    "Generalization of the previous function to test the performance of multiple models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59a47447",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiple_predict_evaluate(models:list[tuple], X_tr: pd.DataFrame, X_ts: pd.DataFrame, y_tr, y_ts):\n",
+    "\n",
+    "    #Create a list of dataframes to hold the performances of each model\n",
+    "    metrics_list = []\n",
+    "\n",
+    "    #Create a list of dataframes to hold the predictions from each model\n",
+    "    predictions_list = []\n",
+    "\n",
+    "    #Iterate through each model\n",
+    "    for model, estimator in models:\n",
+    "        \n",
+    "        #report the performance and predicitions of the model\n",
+    "        metric, preds = predict_evaluate(estimator, X_tr, X_ts, y_tr, y_ts, model)\n",
+    "\n",
+    "        #Append the performance to the metrics list\n",
+    "        metrics_list.append(metric)\n",
+    "\n",
+    "        #Create dataframe to hold the predictions\n",
+    "        df_model = pd.DataFrame({f\"{model}\": preds})\n",
+    "\n",
+    "        #Append the dataframe to the  predictions_list\n",
+    "        predictions_list.append(df_model)\n",
+    "\n",
+    "    #Return the concatenated dataframes\n",
+    "    return pd.concat(metrics_list, ignore_index = True), pd.concat(predictions_list, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a8035d8",
+   "metadata": {},
+   "source": [
+    "Function to plot the confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ae79a9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix(y_true, y_pred, class_names, normalize, model_name):\n",
+    "\n",
+    "    #Create figure\n",
+    "    fig = plt.figure(figsize=(12, 12), dpi=100)  # FORCE a large, readable figure\n",
+    "    ax = fig.add_subplot(111)\n",
+    "\n",
+    "    #Create Confusion Matrix display\n",
+    "    disp = ConfusionMatrixDisplay.from_predictions(\n",
+    "        y_true,\n",
+    "        y_pred,\n",
+    "        display_labels=class_names,\n",
+    "        normalize=normalize,\n",
+    "        cmap=\"Blues\",\n",
+    "        colorbar=True,\n",
+    "        ax=ax\n",
+    "    )\n",
+    "    \n",
+    "    plt.setp(ax.get_xticklabels(), rotation=45, ha=\"right\")\n",
+    "    plt.title(f\"Confusion Matrix - {model_name}\", fontsize=20)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba7fddae",
+   "metadata": {},
+   "source": [
+    "### Preparations of the features and the target"
    ]
   },
   {
@@ -2580,18 +2763,35 @@
    "id": "ac81ed4e",
    "metadata": {},
    "source": [
-    "Find the features and the target and split into a training set and a test set."
+    "Find the features and the target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "372647ab",
    "metadata": {},
    "outputs": [],
    "source": [
     "features = data1.drop(columns=[\"land_type\",\"rgb_hex\", \"overlay_hex\"])\n",
-    "target  = data1[\"land_type\"]\n",
+    "target  = data1[\"land_type\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0375f2b4",
+   "metadata": {},
+   "source": [
+    "Split into a training set and a test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3534b68d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    features, \n",
     "    target, \n",
@@ -2599,7 +2799,7 @@
     "    random_state=42, \n",
     "    shuffle=True,\n",
     "    stratify=target #This ensures the train and test set follow the same distribution as the original dataset\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -2859,6 +3059,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47249863",
+   "metadata": {},
+   "source": [
+    "Check wehether there is any overlap between the training set and the test set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "8936e917",
@@ -2897,6 +3105,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9729cd9",
+   "metadata": {},
+   "source": [
+    "Training target"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "id": "739daa82",
@@ -2918,6 +3134,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5cde783",
+   "metadata": {},
+   "source": [
+    "Test target"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "id": "6a04b268",
@@ -2936,6 +3160,14 @@
    ],
    "source": [
     "y_test_endoced"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f369173",
+   "metadata": {},
+   "source": [
+    "Classes as integers"
    ]
   },
   {
@@ -2961,15 +3193,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdcc1503",
+   "id": "f1e1f109",
    "metadata": {},
    "source": [
-    "Create pipeline to fit the logistic model. One pipeline will fit on the raw data, and the other one will fit on the data after PCA with 10 components is applied."
+    "### Create pipelines to fit the models. One pipeline will fit on the raw data, and the other one will fit on the data after PCA with 10 components is applied for each model considered."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "9a3a8444",
    "metadata": {},
    "outputs": [],
@@ -2989,48 +3221,17 @@
     "     (\"logistic_classifier\", LogisticRegression(\n",
     "         solver = \"saga\", #saga is fater for larger datasets\n",
     "         max_iter = 1000\n",
-    "     ))]\n",
+    "     ))\n",
+    "    ]\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eb590388",
+   "id": "6e1f935d",
    "metadata": {},
    "source": [
-    "Create function to report cross-validation performance - This will help us tweak the hyperparameters in case it's necessary."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "6eeec049",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def evaluate_cv(estimator, X, y, scoring_list, model_name = \"model\"):\n",
-    "    \n",
-    "    #Define StratifiedKFold splitter. This makes sure than no split is more imbalanced than the original data\n",
-    "    cv_splitter = StratifiedKFold(n_splits = 5, shuffle = True, random_state = 42)\n",
-    "\n",
-    "    #Calculate the CV score for each metric\n",
-    "    cv_results = cross_validate(\n",
-    "        estimator, \n",
-    "        X, \n",
-    "        y, \n",
-    "        scoring = scoring_list, \n",
-    "        cv = cv_splitter, \n",
-    "        return_train_score=False\n",
-    "    )\n",
-    "\n",
-    "    #Create a dataframe with all the performance metrics using cv\n",
-    "    row = {\"model\": model_name}\n",
-    "    for k, v in cv_results.items():\n",
-    "        if k.startswith(\"test_\"):\n",
-    "            metric = k.replace(\"test_\", \"\")\n",
-    "            row[f\"{metric}\"] = np.mean(v)\n",
-    "        \n",
-    "    return pd.DataFrame([row]).set_index(\"model\")"
+    "### Cross Validation performance on the training set"
    ]
   },
   {
@@ -3141,130 +3342,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e2bb87b",
+   "id": "f5164193",
    "metadata": {},
    "source": [
-    "Function to evaluate the performance on the test set, and return the predictions"
+    "### Final performance of each model on the test set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "d1a20a2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def predict_evaluate(estimator, X_tr: pd.DataFrame, X_ts: pd.DataFrame, y_tr: pd.DataFrame, y_ts, model_name: str):\n",
-    "\n",
-    "    #Fit the estimator on the training data\n",
-    "    classifier = estimator.fit(X_tr, y_tr)\n",
-    "\n",
-    "    #Find the predictions and probabilities\n",
-    "    predictions = classifier.predict(X_ts)\n",
-    "    predictions_prob = classifier.predict_proba(X_ts)\n",
-    "\n",
-    "    #Calculate the error metrics using predictions\n",
-    "    acc = accuracy_score(y_ts, predictions)\n",
-    "    balanced_acc = balanced_accuracy_score(y_ts, predictions)\n",
-    "    f1 = f1_score(y_ts, predictions, average=\"macro\")\n",
-    "\n",
-    "    #Calculate auroc using the probabilities\n",
-    "    auc = roc_auc_score(y_ts, predictions_prob, average = \"macro\", multi_class=\"ovr\")\n",
-    "\n",
-    "    return pd.DataFrame({\"model\": [model_name], \"Accuracy\": [acc], \"Bal. Acc\": [balanced_acc], \"AUC\": [auc], \"F1\": [f1]}), predictions\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83bccf28",
-   "metadata": {},
-   "source": [
-    "Generalization of the previous function to test the performance of multiple models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "1a211f20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def multiple_predict_evaluate(models:list[tuple], X_tr: pd.DataFrame, X_ts: pd.DataFrame, y_tr, y_ts):\n",
-    "\n",
-    "    #Create a list of dataframes to hold the performances of each model\n",
-    "    metrics_list = []\n",
-    "\n",
-    "    #Create a list of dataframes to hold the predictions from each model\n",
-    "    predictions_list = []\n",
-    "\n",
-    "    #Iterate through each model\n",
-    "    for model, estimator in models:\n",
-    "        \n",
-    "        #report the performance and predicitions of the model\n",
-    "        metric, preds = predict_evaluate(estimator, X_tr, X_ts, y_tr, y_ts, model)\n",
-    "\n",
-    "        #Append the performance to the metrics list\n",
-    "        metrics_list.append(metric)\n",
-    "\n",
-    "        #Create dataframe to hold the predictions\n",
-    "        df_model = pd.DataFrame({f\"{model}\": preds})\n",
-    "\n",
-    "        #Append the dataframe to the  predictions_list\n",
-    "        predictions_list.append(df_model)\n",
-    "\n",
-    "    #Return the concatenated dataframes\n",
-    "    return pd.concat(metrics_list, ignore_index = True), pd.concat(predictions_list, axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29789c18",
-   "metadata": {},
-   "source": [
-    "Function to plot the confusion matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "26d26107",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_confusion_matrix(y_true, y_pred, class_names, normalize, model_name):\n",
-    "\n",
-    "    #Create figure\n",
-    "    fig = plt.figure(figsize=(12, 12), dpi=100)  # FORCE a large, readable figure\n",
-    "    ax = fig.add_subplot(111)\n",
-    "\n",
-    "    #Create Confusion Matrix display\n",
-    "    disp = ConfusionMatrixDisplay.from_predictions(\n",
-    "        y_true,\n",
-    "        y_pred,\n",
-    "        display_labels=class_names,\n",
-    "        normalize=normalize,\n",
-    "        cmap=\"Blues\",\n",
-    "        colorbar=True,\n",
-    "        ax=ax\n",
-    "    )\n",
-    "    \n",
-    "    plt.setp(ax.get_xticklabels(), rotation=45, ha=\"right\")\n",
-    "    plt.title(f\"Confusion Matrix - {model_name}\", fontsize=20)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d4aae955",
-   "metadata": {},
-   "source": [
-    "Find the performance of each model on the test set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "8fe8ab0c",
    "metadata": {},
    "outputs": [
@@ -3280,9 +3366,11 @@
     }
    ],
    "source": [
+    "#Create list of models and model names\n",
     "models_list = [(\"Logistic\", pipe_logistic), \n",
     "               (\"Logistic_PCA\", pipe_logistic_pca)]\n",
     "\n",
+    "#Find the predictions and the performance of each model\n",
     "df_performances, df_predictions = multiple_predict_evaluate(models_list, X_train, X_test, y_train_encoded, y_test_endoced)"
    ]
   },
@@ -3375,7 +3463,7 @@
    "id": "b6f36f4e",
    "metadata": {},
    "source": [
-    "Predictions"
+    "Predictions of each model on the test set"
    ]
   },
   {
@@ -3624,8 +3712,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "220b6b48",
+   "metadata": {},
+   "source": [
+    "Confusion matrices"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "04ee38c5",
    "metadata": {},
    "outputs": [
@@ -3641,12 +3737,13 @@
     }
    ],
    "source": [
+    "#Raw logistic confusion matrix\n",
     "plot_confusion_matrix(y_test_endoced, df_predictions[\"Logistic\"], le.classes_, \"true\", \"Logistic\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "1ea57c7b",
    "metadata": {},
    "outputs": [
@@ -3662,6 +3759,7 @@
     }
    ],
    "source": [
+    "#PCA logistic confusion matrix\n",
     "plot_confusion_matrix(y_test_endoced, df_predictions[\"Logistic_PCA\"], le.classes_, \"true\", \"Logistic PCA\")"
    ]
   },
