--- a/task1_updated.ipynb
+++ b/task1_updated.ipynb
@@ -3151,7 +3151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "d7929ebc",
    "metadata": {},
    "outputs": [
@@ -3171,7 +3171,7 @@
    "source": [
     "print(f\"\\n Number of observations in the training set (actual data): {X_train.shape[0]}\", f\"\\n Number of observations in the test set: {X_test.shape[0]}\")\n",
     "\n",
-    "#SAMPLE\n",
+    "#FROM SAMPLED DATA\n",
     "\n",
     "print(f\"\\n Number of observations in the training set (subsampled data): {X_train_1.shape[0]}\", f\"\\n Number of observations in the test set: {X_test_1.shape[0]}\")"
    ]
