--- a/task2.ipynb
+++ b/task2.ipynb
@@ -50,12 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "16a79f0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data2 = pd.read_csv(\"dataset2.csv\") # Data already in local directory, don't worry about absolute paths\n",
+    "data2 = pd.read_csv(\"data-2.csv.gz\") # Data already in local directory, don't worry about absolute paths\n",
     "input2 = data2.drop(columns=[\"label\"])\n",
     "target2 = data2[\"label\"]"
    ]
